--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"currentTestResult":null,"workingDirectory":"D:\\rnd tool\\C_LINKEDLISTS_2"}
+{"gitStatus":"REPO_CREATED","testStatus":4,"submitStatus":0,"currentTestResult":true,"workingDirectory":"D:\\rnd tool\\C_LINKEDLISTS_2"}
